Fixed wp, and pull&refresh styles

--- a/stylesheets/theme/android/main.styl
+++ b/stylesheets/theme/android/main.styl
@@ -125,6 +125,9 @@ body[data-os="android"]
       &:last-child
         border-bottom 0
 
+  & div.pulltorefresh
+    background-color darken(BACKGROUND, 3%)
+
   & fieldset, input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], label > select, textarea
     border-radius 0 !important
 
