--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -115,6 +115,9 @@ body[data-os="ios"]
       &.theme
         color THEME
 
+  & div.pulltorefresh
+    background-color darken(IOS_BACKGROUND, 3%)
+
   & aside
     background-color IOS_BACKGROUND
     color TEXT !important
