--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -36,6 +36,7 @@ article
       bottom 0
 
   & header
+    display-flexbox-horizontal()
     position relative
     flexbox-order(1)
     flexbox-weight(0)
@@ -52,15 +53,16 @@ article
     transition-duration SECTION_TRANSITION_TIME
 
     & > h1
+      flexbox-weight(1)
+      flexbox-order(1)
       font-weight bold
       font-size 1.5em
       display inline-block
-      position absolute
       text-align center
-      width 100%
       left 0
       margin-top 0
       z-index HEADER_H1_INDEX
+      // overflow-x scroll
 
       & > img
         width auto
@@ -70,19 +72,17 @@ article
     & > nav
       height HEADER_HEIGHT
       max-height HEADER_HEIGHT
+      flexbox-weight(0)
+
 
       &.right
-        position absolute
-        z-index HEADER_NAV_INDEX
-        right 0
+        flexbox-order(2)
 
         & > button
           margin-right 5px
 
       &.left
-        position absolute
-        z-index HEADER_NAV_INDEX
-        left 0
+        flexbox-order(0)
 
         & > button
           margin-left 5px
