--- a/stylesheets/theme/android/main.styl
+++ b/stylesheets/theme/android/main.styl
@@ -32,6 +32,7 @@ body[data-os="android"]
 
     & *
       height HEADER_HEIGHT
+      padding-bottom 0 !important
       &.icon
         &:empty
           font-size 0.9em !important
