--- a/stylesheets/theme/generic/Theme.article.styl
+++ b/stylesheets/theme/generic/Theme.article.styl
@@ -10,7 +10,7 @@ button, .button, input[type=submit], input[type=reset], input[type=button]
   background-color lighten(THEME, 15%)
   color SECONDARY_TEXT
 
-body[data-os], body[data-browser]
+body
   & article
     & > header
       background-color THEME_COLOR
