--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -46,7 +46,7 @@ body[data-os="ios"]
     & *
       height HEADER_HEIGHT
       font-weight 300
-
+      padding-bottom 0 !important
       &.icon
         &:empty
           font-size 0.9em !important
