Fixings on wp and iscroll

--- a/package/stylesheets/tako.android.css
+++ b/package/stylesheets/tako.android.css
@@ -1,3 +1,6 @@
+/* TaKo v1.2.1 - 08/12/2014
+   http://takojs.com
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
 /* TaKo v1.2.1 - 07/12/2014
    http://takojs.com
    Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
