--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -196,7 +196,7 @@ section
   &.active
     display block
 
-  &.indented
+  &.indented:not(.iscroll)
     &.active
       & > div:not(.pulltorefresh)
         // position relative
