--- a/stylesheets/Tako.base.styl
+++ b/stylesheets/Tako.base.styl
@@ -16,7 +16,15 @@ body, html
   left 0
   right 0
 
+   backface-visibility hidden
   -webkit-backface-visibility hidden
+   overflow hidden
+  -ms-content-zooming none
+  -ms-touch-action none
+  -ms-overflow-style none
+  display -ms-grid
+  -ms-grid-rows 1fr
+  -ms-grid-columns 1fr
 
   & *
     -webkit-tap-highlight-color rgba(0,0,0,0)
