--- a/stylesheets/theme/wp/main.styl
+++ b/stylesheets/theme/wp/main.styl
@@ -233,6 +233,7 @@ body[data-os="wp"]
   & label
     color TEXT
   & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], label > select, textarea
+    color TEXT !important
     border-radius 0 !important
   & ul, & ol
     background-color transparent
