Changed colors, fixed hashnavigation

--- a/stylesheets/theme/constants.styl
+++ b/stylesheets/theme/constants.styl
@@ -1,9 +1,12 @@
-THEME               = #FF6600
+THEME               = #35d27c
+// THEME               = #00951f
 THEME_COLOR         = lighten(THEME, 15%)
 SECONDARY           = #2d2d2d
 SECONDARY_ACTIVE    = lighten(SECONDARY, 20%)
 TEXT                = #000
 SECONDARY_TEXT      = #F4F4F4
+HEADER_TEXT         = SECONDARY_TEXT
+// HEADER_TEXT         = lighten(TEXT, 25%)
 FAIL                = #ed1c13
 SUCCESS             = #199c12
 DISABLED            = #acb8b9
