--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -23,10 +23,10 @@ body[data-os="ios"]
     border-bottom 2px solid darken(IOS_BACKGROUND, 20%)
 
     & > h1
-      color TEXT
+      color TEXT !important
 
     & *
-      color THEME
+      color THEME !important
 
     & *.counter
       color THEME
