--- a/stylesheets/Tako.base.styl
+++ b/stylesheets/Tako.base.styl
@@ -137,11 +137,11 @@ body, html
 
 strong
   font-weight bold
-  font-size 1.1em
+  font-size 1.1rem
 
 small
   opacity 0.6
-  font-size 1.1em
+  font-size 1.1rem
 
 .hidden
   display none!important
