--- a/stylesheets/Tako.buttons.styl
+++ b/stylesheets/Tako.buttons.styl
@@ -156,7 +156,7 @@ header
 
     &>span.icon
       margin-right .4em
-      font-size 1em!important
+      font-size 1rem!important
 
     &>img
       position initial!important
@@ -194,12 +194,12 @@ article > nav
 
 footer
   & .icon:before
-    font-size 1.4em
+    font-size 1.4rem
 
   & .icon:empty
     &:before
       margin-right 0
-      font-size 1.8em !important
+      font-size 1.8rem !important
 
   & button, & .button, , & input[type=submit], & input[type=reset], & input[type=button]
     height inherit
