--- a/stylesheets/Tako.forms.styl
+++ b/stylesheets/Tako.forms.styl
@@ -182,7 +182,7 @@ fieldset
     clear both
 
   & > legend
-    font-size 1.2em
+    font-size 1.2rem
     font-weight bold
     border none
     display block
