--- a/stylesheets/Tako.lists.styl
+++ b/stylesheets/Tako.lists.styl
@@ -41,7 +41,7 @@ section
           font-family 'takoicons'
           font-style normal
           font-weight normal !important
-          font-size 1.8em
+          font-size 1.8rem
           speak none
           display inline-block
           text-decoration inherit
@@ -51,12 +51,12 @@ section
           content '\e895'
         &.strong
           &:after
-            font-size 1.2em
+            font-size 1.2rem
             content '\e820'
 
         &.circled
           &:after
-            font-size 1.5em
+            font-size 1.5rem
             content '\e82b'
 
       &:first-child
@@ -76,11 +76,11 @@ section
       & .small:not(img)
         margin-top .2em
         opacity .6
-        font-size 1.1em!important
+        font-size 1.1rem!important
 
       & .strong
         font-weight bold
-        font-size 1.1em
+        font-size 1.1rem
         word-wrap break-word
         white-space -moz-pre-wrap
         white-space pre-wrap
@@ -121,7 +121,7 @@ section
         line-height 1em
         width 24px
         height 24px
-        font-size 1.4em
+        font-size 1.4rem
 
       & label:not(.select)
         line-height 32px
@@ -160,7 +160,7 @@ aside ul, aside ol
 
   & > li
     position relative
-    font-size 1.2em
+    font-size 1.2rem
     padding 11px 10px 11px 10px
     margin-bottom 2px
 
@@ -172,7 +172,7 @@ aside ul, aside ol
         display inline-block
         margin-right .6em
         width 24px
-        font-size 1.6em
+        font-size 1.6rem
 
     & > img
       width LIST_IMAGE
