--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -6,10 +6,10 @@
     font-size 12px !important
 
   article > nav
-    font-size 1em
+    font-size 1rem
 
   footer > nav *
-    font-size 1em
+    font-size 1rem
 
 // Phone mode
 @media screen and (min-device-width : 320px) and (max-device-width : 768px)
