--- a/stylesheets/Tako.notifications.styl
+++ b/stylesheets/Tako.notifications.styl
@@ -126,7 +126,7 @@ div[data-element="notification"]
           height 70px
           line-height 70px
           width 70px
-          font-size 3.5em
+          font-size 3.5rem
           flexbox-weight(0)
           margin-right 10px
 
@@ -172,7 +172,7 @@ div[data-element="notification"]
           line-height 100px
           display block
           text-align center
-          font-size 3em
+          font-size 3rem
 
           &:before
             height 100px
@@ -210,7 +210,7 @@ div[data-element="notification"]
 
       & > header
         font-weight bold
-        font-size 1.5em !important
+        font-size 1.5rem !important
 
         & > .icon
           font-size 36px
@@ -280,7 +280,7 @@ div[data-element="notification"]
 
         & .icon
           margin-top 0
-          font-size 5em
+          font-size 5rem
           width 100px
           height 100px
           line-height 97px
@@ -324,7 +324,7 @@ div[data-element="notification"]
         line-height 50px
         text-align center
         display inline-block
-        font-size 1.7em
+        font-size 1.7rem
         font-weight bolder
 
         height 50px
