--- a/stylesheets/Tako.pullrefresh.styl
+++ b/stylesheets/Tako.pullrefresh.styl
@@ -32,14 +32,14 @@ div.pulltorefresh
       padding 0
       margin-left 1em
       margin-right 1em
-      font-size 2em
+      font-size 2rem
 
       &.down-big
         transition-duration 250ms
 
       &.animated
         border none
-        font-size 3em
+        font-size 3rem
         margin-right .5em
         margin-top 10px
 
