--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -53,7 +53,7 @@ article
 
     & > h1
       font-weight bold
-      font-size 1.5em
+      font-size 1.5rem
       display inline-block
       position absolute
       text-align center
@@ -90,7 +90,7 @@ article
 article > nav
   flexbox-weight(0)
   flexbox-order(2)
-  font-size 1.2em
+  font-size 1.2rem
   width 100%
   line-height HEADER_HEIGHT
   padding 0
@@ -109,17 +109,17 @@ article > nav
     display block
     height HEADER_HEIGHT
     line-height HEADER_HEIGHT
-    font-size 1em!important
+    font-size 1rem!important
     margin-top 0!important
     transition-duration 200ms
 
   & .icon
     &:before
-      font-size 1em
+      font-size 1rem
     &:empty
       &:before
         margin-right 0
-        font-size 1.4em !important
+        font-size 1.4rem !important
 
 footer
   position relative
