--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -18,7 +18,7 @@ aside
     border-radius(2px)
     padding 0 .4em 0 .3em
     float right
-    font-size .7em
+    font-size .7rem
 
   &.show
     transform(translateX(0))
