Improved aside scrolling

--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -189,6 +189,9 @@ section
   flex 1 9999999 auto
   flexbox-order(3)
 
+  // &::-webkit-scrollbar
+  //   width 0 !important
+
   &.horizontal
     width auto
     min-width 100%
