--- a/stylesheets/Tako.base.styl
+++ b/stylesheets/Tako.base.styl
@@ -28,6 +28,10 @@ body, html
 
   & *
     -webkit-tap-highlight-color rgba(0,0,0,0)
+    -ms-overflow-style none
+
+    &::-webkit-scrollbar
+      width 0 !important
 
 .indented > *
   padding INDENT
