not full aside header separation

--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -1,7 +1,7 @@
 aside
   display block
   width ASIDE_WIDTH
-  top HEADER_HEIGHT
+  top HEADER_HEIGHT + 1
   bottom 0
   transform(translateX(- ASIDE_TRANSITION))
   position absolute
