Fixed desktop aside + article_animation

--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -56,9 +56,7 @@
     box-flex 0
     flex 0 0 auto
     flexbox-order(1)
-
-  // article
-  //   display none
+    z-index 150
 
   article > article
     display-flexbox-vertical()
