Fixed Flexbox layouts

--- a/stylesheets/Tako.layouts.styl
+++ b/stylesheets/Tako.layouts.styl
@@ -87,6 +87,33 @@
   & > *
     flexbox-weight(1)
 
+    &.box_0
+      flexbox-weight(0)
+
+    &.box_2
+      flexbox-weight(2)
+
+    &.box_3
+      flexbox-weight(3)
+
+    &.box_4
+      flexbox-weight(4)
+
+    &.box_5
+      flexbox-weight(5)
+
+    &.box_6
+      flexbox-weight(6)
+
+    &.box_7
+      flexbox-weight(7)
+
+    &.box_8
+      flexbox-weight(8)
+
+    &.box_9
+      flexbox-weight(9)
+
 .box_0
   flexbox-weight(0)
 
@@ -113,6 +140,7 @@
 
 .box_9
   flexbox-weight(9)
+
 
 //Flex classes
 .flex-vertical
